--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -5,66 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario de Consultas</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            margin-top: 20px;
-            max-width: 800px;
-            width: 100%;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            text-align: center;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-        .btn {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-        .calendar-week {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-        .day {
-            border: 1px solid #ddd;
-            padding: 10px;
-            min-height: 100px;
-        }
-        .day-header {
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 10px;
+        /* ... (mantener los estilos existentes) ... */
+        .day-content {
+            min-height: 50px; /* Asegura que haya espacio para soltar las consultas */
         }
         .consulta {
             background-color: #4CAF50;
@@ -72,19 +15,7 @@
             padding: 5px;
             margin: 5px;
             cursor: move;
-        }
-        .consultas-disponibles {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-        nav {
-            margin-top: 20px;
-        }
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #4CAF50;
+            display: inline-block;
         }
     </style>
 </head>
@@ -124,8 +55,8 @@
 
         function generarCalendarioSemanal(semana) {
             calendarWeek.innerHTML = '';
-            const fechaInicio = new Date(semana);
-            fechaInicio.setDate(fechaInicio.getDate() + 1); // Ajustar al lunes
+            const [year, week] = semana.split('-W');
+            const fechaInicio = getDateOfISOWeek(week, year);
 
             diasSemana.forEach((dia, index) => {
                 const fecha = new Date(fechaInicio);
@@ -138,6 +69,17 @@
                 `;
                 calendarWeek.appendChild(dayElement);
             });
+        }
+
+        function getDateOfISOWeek(week, year) {
+            const simple = new Date(year, 0, 1 + (week - 1) * 7);
+            const dayOfWeek = simple.getDay();
+            const ISOweekStart = simple;
+            if (dayOfWeek <= 4)
+                ISOweekStart.setDate(simple.getDate() - simple.getDay() + 1);
+            else
+                ISOweekStart.setDate(simple.getDate() + 8 - simple.getDay());
+            return ISOweekStart;
         }
 
         function cargarConsultas() {
@@ -166,7 +108,9 @@
             ev.preventDefault();
             const data = ev.dataTransfer.getData("text");
             const consultaElement = document.getElementById(data);
-            ev.target.closest('.day-content').appendChild(consultaElement.cloneNode(true));
+            if (consultaElement) {
+                ev.target.closest('.day-content').appendChild(consultaElement.cloneNode(true));
+            }
         }
     </script>
 </body>
